@@ -159,3 +159,59 @@ ats_mallopt(int param ATS_UNUSED, int value ATS_UNUSED)
 #endif // ! TS_HAS_JEMALLOC
   return 0;
 }
+
+int
+ats_msync(caddr_t addr, size_t len, caddr_t end, int flags)
+{
+  unsigned pagesize = ats_pagesize();
+
+  // align start back to page boundary
+  caddr_t a = (caddr_t) (((uintptr_t) addr) & ~(pagesize - 1));
+  // align length to page boundry covering region
+  size_t l = (len + (addr - a) + (pagesize - 1)) & ~(pagesize - 1);
+  if ((a + l) > end)
+    l = end - a;                // strict limit
+#if defined(linux)
+/* Fix INKqa06500
+   Under Linux, msync(..., MS_SYNC) calls are painfully slow, even on
+   non-dirty buffers. This is true as of kernel 2.2.12. We sacrifice
+   restartability under OS in order to avoid a nasty performance hit
+   from a kernel global lock. */
+#if 0
+  // this was long long ago
+  if (flags & MS_SYNC)
+    flags = (flags & ~MS_SYNC) | MS_ASYNC;
+#endif
+#endif
+  int res = msync(a, l, flags);
+  return res;
+}
+
+int
+ats_madvise(caddr_t addr, size_t len, int flags)
+{
+#if defined(linux)
+  (void) addr;
+  (void) len;
+  (void) flags;
+  return 0;
+#else
+  unsigned pagesize = ats_pagesize();
+  caddr_t a = (caddr_t) (((uintptr_t) addr) & ~(pagesize - 1));
+  size_t l = (len + (addr - a) + pagesize - 1) & ~(pagesize - 1);
+  int res = 0;
+  res = madvise(a, l, flags);
+  return res;
+#endif
+}
+
+int
+ats_mlock(caddr_t addr, size_t len)
+{
+  unsigned pagesize = ats_pagesize();
+
+  caddr_t a = (caddr_t) (((uintptr_t) addr) & ~(pagesize - 1));
+  size_t l = (len + (addr - a) + pagesize - 1) & ~(pagesize - 1);
+  int res = mlock(a, l);
+  return res;
+}
